--- a/src/main/resources/application-desenvolvimento.properties
+++ b/src/main/resources/application-desenvolvimento.properties
@@ -5,7 +5,8 @@ nome.perfil=desenvolvimento
 #server.servlet.context-path=/api/v1
 server.port=8082
 # desabilita reload automatico devtools
-spring.devtools.restart.enabled=true
+#spring.devtools.restart.enabled=true
+spring.devtools.add-properties=false
 # habilita leitura de arquivos .data.sql
 #spring.jpa.defer-datasource-initialization=true
 ########## CONFIGURACOES GERAIS ###########################
@@ -17,11 +18,24 @@ spring.devtools.restart.enabled=true
 # createDataBase = cria o BD caso nao exista
 # ServerTime = define a localizacao do BD e evita erros
 # &useUnicode=yes&characterEncoding=UTF-8 = para corrigir problemas de acentuacao no BD
-spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:3306/cuidarapp?createDatabaseIfNotExist=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
+##h2
+#spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:3306/cuidarapp?createDatabaseIfNotExist=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=159951
+##mysql
+#spring.datasource.url=jdbc:mysql://containers-us-west-195.railway.app:6576/railway?createDatabaseIfNotExist=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
+#spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}?createDatabaseIfNotExist=true&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
+#spring.datasource.username=${MYSQLUSER}
+#spring.datasource.password=${MYSQLPASSWORD}
+## postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/cuidarapp89
+spring.datasource.username=postgres
+spring.datasource.password=159951
+
 # login e senha
 # trocar para variaveis de ambiente ou linha de comando
-spring.datasource.username=root
-spring.datasource.password=159951
+
+
 ########## CONFIGURACOES DO BD MYSQL ###########################
 
 #
@@ -29,7 +43,9 @@ spring.datasource.password=159951
 ########### CONFIGURACOES DA JPA ###########################
 ## indica o dialeto para o Hibernate gerar a sintaxe SQL correta suportada pelo MySQL 8.
 ## influencia nas configuracoes das tabelas criadas, como tipo de engine.
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
 #
 ##cria um arquivo sql com o script de geracao das tabelas
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
@@ -52,7 +68,10 @@ spring.jpa.properties.hibernate.format_sql=true
 #indica diretorio do flyway
 spring.flyway.locations=classpath:db/des
 ##se os scripts causarem excecoes, o aplicativo nao falhara ao iniciar
-##spring.datasource.continue-on-error
+#spring.datasource.continue-on-error
+##define schema para criar flyway_schema_history
+spring.flyway.schemas=cuidarapp_schema
+spring.flyway.default-schema=cuidarapp_schema
 #################### FLYWAY #########################
 
 #
@@ -67,3 +86,15 @@ spring.flyway.locations=classpath:db/des
 #
 ########### CONFIGURACOES HIKARI POOL DE CONEXOES ###########################
 
+#
+
+########### CONFIGURACOES POOL DE CONEXOES COM BD ###########################
+##número inicial de conexões
+#spring.datasource.initialSize=50
+##número máximo de conexões
+#spring.datasource.maxActive=200
+##número máximo de conexões inativas
+#spring.datasource.maxIdle=200
+##número mínimo de conexões inativas
+#spring.datasource.minIdle=50
+########### CONFIGURACOES POOL DE CONEXOES COM BD ###########################
